Redesigned the tree s.a. to avoid having keys and values.

--- a/web/index.html
+++ b/web/index.html
@@ -7,9 +7,9 @@
   </head>
   <body>
     <label>
-      Type key you wish to add <i>(separate subcategories with slashes)</i> followed by value<br/>
+      Type key you wish to add <i>(separate subcategories with slashes)</i><br/>
       <input type="text" name="key" id="key"></input>
-      <input type="button" name="add" id="add" value="Send"></input>
+      <input type="button" name="add" id="add" value="Add"></input>
     </label>
     <h1>tree</h1>
     <ul id="container"></ul>
